--- a/pages/IndexOne.html
+++ b/pages/IndexOne.html
@@ -3,7 +3,7 @@
 <head>
 	<link rel="stylesheet" type="text/css" href="dropdown.css">
 	<title>dropdown menu</title>
-	<link rel="stylesheet" type="text/css" href="../css/styleOne.css">
+	<link rel="stylesheet" type="text/css" href=".../css/styleOne.css">
 	<style>
 		body
 		{
