--- a/pages/demo1.html
+++ b/pages/demo1.html
@@ -1,6 +1,53 @@
 <!DOCTYPE html>
-<html lang=" en">
-    <head>
-        
-    </head>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="../css/Demo1.css">
+    <title>Document</title>
+</head>
+<body>
+ <div class="hello">
+    <ul>
+        <li>Home</li>
+        <li>Contact</li>
+        <li>History</li>
+    </ul>
+</div>
+<div>
+    <table>
+        <tr>
+            <th>name</th>
+            <th> RollNo.</th>
+            <th> Class</th>
+            <th>Mark</th>
+        </tr>
+        <tr>
+        <td>Nitish</td>
+        <td>101</td>
+        <td>10<Sup>th</Sup></td>
+        <td>495</td>
+    </tr>
+    </table>
+</div>
+<div>
+    <h2>travelling</h2>
+    <form action="text.net">
+        <input type="text" placeholder="Enter your Name"><br>
+        <label for="sectionid">
+        <input type="radio" value="section a" name="section" id="Sectionid">section A
+        <input type="radio" value="section b" name="section" id="Sectionid">section b
+    </label>
+        <h5>Form Fill Up</h5>
+    </form>
+</div>
+<footer>
+    <ol>
+        <li>Home</li>
+        <li>Contact</li>
+        <li>History</li>
+    </ol>
+</footer>
+</body>
 </html>
