--- a/pages/Index.html
+++ b/pages/Index.html
@@ -5,14 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My text pages</title>
-    <link rel="stylesheet" type="text/css" href="/css/style.css">
+    <link rel="stylesheet" type="text/css" href="../css/style.css">
     <style>
-       
+       <!---->
     </style>
 </head>
 <body>
    <h1>BridgeLabz is cool</h1>
-   <img src="/assets/bridgelabzlogo.jpg" alt="BridgeLabzlogo" width="15%">
+   <div class="box">
+   <img src="../assets/bridgelabzlogo.jpg" alt="BridgeLabzlogo">
+</div>
    <p> You Can Make It With BridgeLabz Step Up Program</p>
    <ul>
     <li>Techologists</li>
