--- a/HTML-Webpage/htmlpages.html
+++ b/HTML-Webpage/htmlpages.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>HTML</title>
-        <link rel="stylesheet" type="text/css" href="../HTML-Webpage/Style1.css">
+        <link rel="stylesheet" type="text/css" href="../HTML-Webpage/style/Style1.css">
     </head>
     <body>
         <div id="title">
